alignment fixed

--- a/src/main.scss
+++ b/src/main.scss
@@ -24,6 +24,7 @@ body {
 .pageContent {
     display: flex;
     flex-direction: column;
+    justify-content: space-evenly;
     align-items: center;
     min-height: 100vh;
 }
